syntax = "proto3";

option csharp_namespace = "NetCoreMicroserviceSample.MachineService";

service MachineAccess {
    rpc UpdateSettings(MachineSettingsUpdate) returns (MachineResponse);
    rpc TriggerSwitch(SwitchTrigger) returns (MachineResponse);
    rpc GetMeasurements(MeasurementRequest) returns (stream MeasurementResponse);
}

message MachineSettingsUpdate {
    string MachineId = 1;
    string SettingId = 2;
    double Value = 3;
}

message SwitchTrigger {
    string MachineId = 1;
    string SwitchId = 2;
}

message MachineResponse {
    int32 ResultCode = 1; // For demo purposes only, will always be 1
}

message MeasurementRequest {
    string MachineId = 1;
    repeated string MeasurementId = 2;
}

message MeasurementResponse {
    string MachineId = 1;
    repeated MeasurementValue Values = 2;
}

message MeasurementValue {
    string MeasurementId = 1;
    double Value = 2;
}